# py-template

./: .env copy.example  .gitignore  LICENSE  README.md  makefile  pyproject.toml
src/my_package/: main.py
src/my_package/services/: hello_world_service.py
src/project_template/: __init__.py
src/project_template/services/: hello_world_service.py
tests/: test_hello_world_service.py
